--- a/index.html
+++ b/index.html
@@ -57,32 +57,35 @@
     </header>
 
 
-    <div class="hero bg-gradient-to-r from-blue-500 to-purple-600 text-white py-10">
+ <div class="hero bg-[#CFF0DC] text-white pt-10 pb-0">
   <div class="hero-content flex-col lg:flex-row justify-between w-full gap-6">
     
     <!-- Left Image -->
-    <img src="https://placekitten.com/250/250" 
-         class="rounded-2xl shadow-2xl w-32 h-32 lg:w-48 lg:h-48 object-cover" />
+    <img src="assets/hero-leaf1.png" 
+         class=" w-80 h-60 lg:w-80 lg:h-60 object-cover  " />
 
     <!-- Middle Text -->
-    <div class="text-center lg:text-center max-w-md">
-      <h1 class="text-3xl lg:text-5xl font-bold">🌟 Welcome Banner</h1>
-      <p class="py-4 text-base lg:text-lg">
-        This banner is responsive. On mobile, items stack vertically. 
-        On desktop, images stay left & right with text in the middle.
-      </p>
-      <button class="btn btn-accent">Get Started</button>
-    </div>
+    <div class="text-center lg:text-center max-w-xl lg:max-w-2xl flex-1">
+        <h1 class="text-3xl md:text-3xl lg:text-4xl font-bold leading-tight text-black">
+          Plant a Tree, Grow a Future
+        </h1>
+        <p class="py-4 font-semibold  text-gray-500 text-base md:text-lg lg:text-lg">
+          Join our mission to plant 1 million trees and make the Earth greener for future
+          generations.
+        </p>
+        <button class="btn btn-accent  bg-[#FACC15] rounded-3xl">Get Involved</button>
+      </div>
 
     <!-- Right Image -->
-    <img src="https://placebear.com/250/250" 
-         class="rounded-2xl shadow-2xl w-32 h-32 lg:w-48 lg:h-48 object-cover" />
+    <img src="assets/hero-leaf2.png" 
+         class="  w-80 h-60 lg:w-80 lg:h-60 object-cover" />
 
   </div>
-</div>
+  </div>
 
- 
 
+
+    
 
 
 
