added in thard work

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </div>
     </header>
 
-
+<section>
  <div class="hero bg-[#CFF0DC] text-white pt-10 pb-0">
   <div class="hero-content flex-col lg:flex-row justify-between w-full gap-6">
     
@@ -82,11 +82,75 @@
 
   </div>
   </div>
+  </section>
 
 
+<section class="bg-[#F0FDF4]">
 
-    
+<section>
+<!--maj kane kaj baki-->
 
+</section>
+
+ 
+<section class="py-10">
+  <h2 class="font-bold text-black text-center text-2xl mb-8">
+    About the Campaign
+  </h2>
+
+  <div class="flex flex-col lg:flex-row items-center justify-center gap-12 max-w-6xl mx-auto px-4">
+    <!-- Left Image -->
+    <div class="flex-shrink-0">
+      <img src="assets/about.png" alt="About Green Earth" 
+           class="w-72 md:w-96 h-auto object-cover rounded-xl shadow-md">
+    </div>
+
+    <!-- Right Content -->
+    <div class="flex-1 flex flex-col justify-center text-center lg:text-left">
+      <p class="text-gray-600 leading-relaxed mb-4">
+        Green Earth is a global tree plantation initiative dedicated to fighting 
+        climate change. Since our start, we’ve planted over 500,000 trees 
+        worldwide. By joining our campaign, you help restore forests, create 
+        habitats for wildlife, and combat global warming.
+      </p>
+
+      <!-- Unordered list with dots -->
+      <ul class="list-disc list-inside text-gray-700 space-y-2">
+        <li>Restoration of natural habitats</li>
+        <li>Improvement of air quality</li>
+        <li>Support for local communities</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+</section>
+
+<section class="bg-[#CFF0DC] py-10">
+  <h2 class="font-bold text-black text-center text-2xl mb-10">
+    Our Impact
+  </h2>
+
+  <!-- Cards Container -->
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto px-6">
+
+    <div class="bg-white rounded-2xl shadow-md flex flex-col items-center justify-center p-6">
+      <h1 class="font-bold text-3xl text-[#15803D]">500K+</h1>
+      <p class="font-normal text-gray-500">Trees Planted</p>
+    </div>
+
+    <div class="bg-white rounded-2xl shadow-md flex flex-col items-center justify-center p-6">
+      <h1 class="font-bold text-3xl text-[#15803D]">120+</h1>
+      <p class="font-normal text-gray-500">Communities Involved</p>
+    </div>
+
+    <div class="bg-white rounded-2xl shadow-md flex flex-col items-center justify-center p-6">
+      <h1 class="font-bold text-3xl text-[#15803D]">30+</h1>
+      <p class="font-normal text-gray-500">Countries Reached</p>
+    </div>
+
+  </div>
+</section>
 
 
 
