--- a/index.html
+++ b/index.html
@@ -152,6 +152,31 @@
   </div>
 </section>
 
+<footer class="bg-[#166534] text-white">
+  <!-- Main Section -->
+  <section class="py-10">
+    <div class="max-w-3xl mx-auto px-6 flex flex-col items-center gap-6">
+      <h2 class="text-3xl font-bold text-center text-white">Plant a Tree Today</h2>
+
+      <!-- Form Card -->
+      <div class="bg-[#15803D] shadow-2xl rounded-3xl p-8 w-full flex flex-col gap-6">
+        <input type="text" placeholder="Your Name" class="px-5 py-4 rounded-xl w-full text-black text-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"/>
+        <input type="email" placeholder="Your Email Address" class="px-5 py-4 rounded-xl w-full text-black text-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"/>
+        <input type="number" placeholder="Number of Trees" class="px-5 py-4 rounded-xl w-full text-black text-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"/>
+        <button type="submit" class="bg-[#FACC15] rounded-3xl text-black font-bold px-8 py-4 hover:bg-yellow-500 transition text-lg">
+          Donate Now
+        </button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Bottom Bar -->
+  <div class="bg-[#14532D] w-full">
+    <h2 class="text-center text-white text-lg font-normal leading-[72px] m-0">
+      © 2025 Green Earth. All Rights Reserved.
+    </h2>
+  </div>
+</footer>
 
 
     <script src="styles/index.js"></script>
